# iris-launcher

./: package-lock.json  package.json  tailwind.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AnimatedRoutes.tsx  AppSidebar.tsx
src/components/dashboard/: AgentOrb.tsx  DashboardPrimitives.tsx  GitHubGate.tsx  LiquidIcon.tsx  PageTransition.tsx  ParallaxBackground.tsx  ThemeToggle.tsx
src/contexts/: AppContext.tsx  ThemeContext.tsx
src/hooks/: use-iris-backend.ts  use-iris-mode.ts  use-iris-status.ts  use-uptime.ts
src/lib/: iris-api.ts  mock-data.ts
src/pages/: DiffReviewPage.tsx  FirstRunPage.tsx  GitHubPage.tsx  GitPage.tsx  IdentityPage.tsx  ModeSelectPage.tsx  OverviewPage.tsx  PermissionsPage.tsx  ProjectsPage.tsx  RebuildPage.tsx  TailscalePage.tsx
