[package]
name = "iris-launcher"
version = "0.1.0"
description = "IRIS Launcher — first-run setup and mode selection"
authors = ["IRIS Team"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
